feat: webauthn analytics
(cherry picked from commit 1a41e044d4573d4208ee851c67ffc0b8e1b267ca)